--- a/app/src/main/res/layout/content_local_results.xml
+++ b/app/src/main/res/layout/content_local_results.xml
@@ -8,4 +8,14 @@
     tools:context=".local_results"
     tools:showIn="@layout/activity_local_results">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/match_results"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
