--- a/app/src/main/res/layout/fragment_new_match_location.xml
+++ b/app/src/main/res/layout/fragment_new_match_location.xml
@@ -5,10 +5,5 @@
     android:layout_height="match_parent"
     tools:context=".new_match_location">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+    <include layout="@layout/fragment_map" />
 </FrameLayout>
