--- a/app/src/main/res/layout/activity_add_pictures.xml
+++ b/app/src/main/res/layout/activity_add_pictures.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".new_match_pictures">
+    tools:context=".AddPictures">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,4 +24,5 @@
             android:text="Add picture" />
 
     </LinearLayout>
-</FrameLayout>
+
+</android.support.constraint.ConstraintLayout>
